supabase module connected

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
-    "html.format.wrapAttributes": "force"
+    "html.format.wrapAttributes": "force",
+    "typescript.tsdk": "node_modules/typescript/lib"
 
 }
