--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
-    "@nuxtjs/supabase": "^0.3.0",
+    "@nuxtjs/supabase": "^0.3.8",
     "@vueuse/core": "^10.4.1",
     "@vueuse/nuxt": "^10.4.1",
     "nuxt": "^3.7.3"
@@ -19,5 +19,8 @@
   "dependencies": {
     "@nuxt/image": "^1.0.0-rc.2",
     "@nuxtjs/tailwindcss": "^6.1.3"
+  },
+  "overrides": {
+    "@supabase/gotrue-js": "2.43.1"
   }
 }
