--- a/package.json
+++ b/package.json
@@ -11,16 +11,14 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
-    "@nuxtjs/supabase": "^0.3.8",
     "@vueuse/core": "^10.4.1",
     "@vueuse/nuxt": "^10.4.1",
     "nuxt": "^3.7.3"
   },
   "dependencies": {
     "@nuxt/image": "^1.0.0-rc.2",
-    "@nuxtjs/tailwindcss": "^6.1.3"
-  },
-  "overrides": {
-    "@supabase/gotrue-js": "2.43.1"
+    "@nuxtjs/supabase": "^0.3.8",
+    "@nuxtjs/tailwindcss": "^6.1.3",
+    "@supabase/gotrue-js": "^2.56.0"
   }
 }
