--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nuxt/image": "^1.0.0-rc.2",
     "@nuxtjs/supabase": "^0.3.8",
     "@nuxtjs/tailwindcss": "^6.1.3",
+    "@prisma/client": "^5.5.2",
     "@supabase/gotrue-js": "^2.56.0",
     "prisma": "^5.5.2"
   }
