--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@nuxtjs/tailwindcss": "^6.1.3",
     "@prisma/client": "^5.5.2",
     "@supabase/gotrue-js": "^2.56.0",
+    "joi": "^17.11.0",
     "prisma": "^5.5.2"
   }
 }
