--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "postinstall": "prisma generate"
+    "build": "prisma generate && <actual-build-command>"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
